fixed email template loading issue